--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">IswHpay</string>
+    <string name="btn_cal_1">1</string>
+    <string name="btn_cal_2">2</string>
+    <string name="btn_cal_3">3</string>
+    <string name="btn_cal_4">4</string>
+    <string name="btn_cal_5">5</string>
+    <string name="btn_cal_6">6</string>
+    <string name="btn_cal_7">7</string>
+    <string name="btn_cal_8">8</string>
+    <string name="btn_cal_9">9</string>
+    <string name="btn_esc">ESC</string>
+    <string name="btn_cal_0">0</string>
+    <string name="btn_confirm">ENTER</string>
 </resources>
